# RepoPT

./: Cargo.toml  LICENCE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
.irdb/projects/: P0001.toml  P0003.toml
.irdb/tickets/: T0001.toml  T0002.toml  T0003.toml  T0004.toml  T0005.toml  T0006.toml  T0007.toml
.trunk/: trunk.yaml
repopt/: Cargo.toml
repopt/.irdb/tickets/: T0001.toml
repopt/example_data/projects/: P0001.toml  P0002.toml
repopt/example_data/tickets/: T00004.toml  T0001.toml  T0002.toml  T0003.toml  T0004.toml
repopt/src/: actions.rs  in_repo_db.rs  in_repo_db_structs.rs  main.rs  output_formatter.rs  project_data.rs  toml_utils.rs
repopt/src/actions/: get_user_input.rs  mod.rs
repopt/src/in_repo_db/: git_utils.rs  mod.rs  structs.rs
repopt/src/in_repo_db/structs/: mod.rs  project.rs  tests.rs  ticket.rs
