[package]
name = "repopt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
derive_more = "0.99.18"
inquire = "0.7.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
toml = "0.8.14"
typed-builder = "0.18.2"
ulid = "1.1.2"
