[package]
name = "repopt"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
derive_more = "0.99.18"
inquire = "0.7.5"
lazy_static = "1.5.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
toml = "0.8.14"
typed-builder = "0.18.2"

[lints.clippy]
enum_glob_use = "deny"
#pedantic = "warn"
uninlined_format_args = "warn"
