[package]
name = "repopt"
version = "0.1.0"
description = "In Repo Ticketing System"
license = "MIT"
repository = "https://github.com/va1ha11a/RepoPT"
readme = "README.md"
keywords = ["project", "ticket", "git", "tool"]
categories = ["development-tools", "git-tools"]
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
derive_more = "0.99.18"
gix = { version = "0.64.0", default-features = false }
inquire = "0.7.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
toml = "0.8.14"
typed-builder = "0.19.1"

[lints.clippy]
#multiple_crate_versions = "warn"
enum_glob_use = "deny"
uninlined_format_args = "warn"
pedantic = "warn"
complexity = "warn"
suspicious = "warn"
correctness = "warn"
style = "warn"
perf = "warn"
#cargo = "warn"
#restriction = "warn"
